# gallery-of-babel

./: CMakeLists.txt  Makefile  README.md  baseconvert.py
examples/: example.txt
src/: big_number.c  big_number.h  gallery.c  gallery.h  main.c  palette.h  png_wrapper.c  png_wrapper.h
